--- a/templates/football/football_game.html
+++ b/templates/football/football_game.html
@@ -25,5 +25,5 @@
         </tbody>
     </table>
 
-    <p><a href="{{ url_for('football.upcoming_games') }}">Back to Upcoming Games</a></p>
+    <p><a href="{{ url_for('football.index') }}">Back to Upcoming Games</a></p>
 {% endblock %}
