--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5,11 +5,12 @@ html, body, h1, h2, h3, h4, h5, h6, p, ul, ol, li {
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Nunito Sans', sans-serif;
     font-size: 16px;
     line-height: 1.5;
-    color: #333;
-    background-color: #f5f5f5;
+    color: #ffffff;
+    background-color:#2D2D2D;
+    
 }
 
 /* Container for page content */
@@ -21,7 +22,7 @@ body {
 
 /* Header */
 header {
-    background-color: #051336;
+    background-color: #242221;
     color: #fff;
     padding: 10px;
 }
@@ -56,7 +57,7 @@ main {
 footer {
     text-align: center;
     padding: 10px;
-    background-color: #051336;
+    background-color: #389e90;
     color: #fff;
 }
 /* Other CSS rules */
@@ -64,12 +65,13 @@ footer {
 /* Add lines between rows and columns */
 .table td,
 .table th {
-  border: 1px solid #dee2e6;
+/*  border: 4px solid #dee2e6;*/
+background-color: #242221fb;
 }
 
 /* Make the away team row light gray */
 .table-away-team {
-  background-color: #9c9c9c;
+  background-color: #2D2D2D; 
 }
 
 /* Add more space between games */
@@ -117,6 +119,109 @@ html, body {
 }
 
 .table thead th {
-    background-color: #051336;
+    background-color: #D95204;
     color: #fff;
+}
+.table th.matchup,
+.table td.matchup {
+    width: 40%; /* Adjust this value to set the desired width */
+}
+
+
+.bookmaker-odds {
+    opacity: 0;
+    max-height: 0;
+    overflow: hidden;
+    padding: 0;
+    transform: scaleY(0);
+    transform-origin: top;
+    transition: max-height 0.5s ease-out, padding 0.5s ease-out, opacity 0.5s ease-out, transform 0.5s ease-out;
+    display:none;
+}
+
+.expanded {
+    opacity: 1;
+    padding: 5px;
+    transform: scaleY(1);
+}
+
+.table-centered-data {
+    text-align: center;
+    vertical-align: middle;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: #389e90;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #389e90;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+.btn-primary, .btn-primary:link, .btn-primary:visited, .btn-primary:hover, .btn-primary:active {
+    color: #fff;
+    background-color: #007bff;
+    border-color: #007bff;
+    text-decoration: none;
+}
+.min-width-ai {
+    min-width: 100px; /* Adjust this value based on your desired minimum width */
+}
+
+.matchup.seafoam-bg {
+    background-color: #389e90;
+}
+
+.min-width-odds {
+    min-width: 100px; /* Adjust this value based on your desired minimum width */
 }
