--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Sports Betting App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl7/1L_dstPt3HV5HzF6Gvk/e3s4x+6dU2Qcu2sEdY" crossorigin="anonymous">
@@ -23,22 +26,21 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('baseball.index') }}">Baseball</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('football.index') }}">Football</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('basketball.index') }}">Basketball</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('hockey.index') }}">Hockey</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('soccer.index') }}">Soccer</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Sports
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="{{ url_for('baseball.index') }}">Baseball</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('basketball.index') }}">Basketball</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('hockey.index') }}">Hockey</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('soccer.index') }}">Soccer</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('football.index') }}">Football</a></li>
+                            </ul>
                         </li>
                     </ul>
+                
+                
                 </div>
             </div>
         </nav>
@@ -56,4 +58,21 @@
 
     <!-- Bootstrap and necessary JavaScript files -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl7/1L_dstPt3HV5HzF6Gvk/e3s4x+6dU2Qcu2sEdY" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz4fnFO9gybB3S2/uW99zbzDfIcFzY+z+x4Yp4q4pJRdb
+   
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js" integrity="sha384-oBqDVmMz4fnFO9gybB3S2/uW99zbzDfIcFzY+z+x4Yp4q4pJRdb" crossorigin="anonymous"></script>
+    <script>
+        $(document).ready(function() {
+            // Save the scroll position in sessionStorage
+            $(window).scroll(function() {
+                sessionStorage.setItem('scrollPosition', $(window).scrollTop());
+            });
+    
+            // Restore the scroll position if it exists in sessionStorage
+            if (sessionStorage.getItem('scrollPosition') !== null) {
+                $(window).scrollTop(sessionStorage.getItem('scrollPosition'));
+            }
+        });
+    </script>
+
+
+    
