--- a/templates/basketball/basketball.html
+++ b/templates/basketball/basketball.html
@@ -1,37 +1,32 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Today's Basketball Games</h1>
+    <h1>Upcoming NBA</h1>
     <div class="table-spacing">
         {% for game in games %}
+            <a href="{{ url_for('basketball.game', game_id=game.id) }}" class="btn btn-primary">Game Details</a>
             <div class="table-wrapper">
                 <table class="table table-striped table-game-spacing table-limited-width">
                     <thead>
                         <tr>
-                            <th>Game ID</th>
-                            <th>Game Time</th>
-                            <th>Matchup</th>
-                            <th>Moneyline Odds</th>
-                            
+                            <th class="matchup">Game Time</th>
+                            <th class="matchup">Matchup</th>
+                            <th>Average Odds</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td rowspan="2" class="table-centered-data table-data-spacing table-equal-width-columns">
-                                <a href="{{ url_for('basketball.game', game_id=game.id) }}">#{{ game.id }}</a>
-                            </td>
-                            <td rowspan="2" class="table-centered-data table-data-spacing table-equal-width-columns">{{ game.time }}</td>
-                            <td class="table-data-spacing table-equal-width-columns">{{ game.away_team.city }} {{ game.away_team.name }}</td>
-                            <td class="table-centered-data table-data-spacing table-equal-width-columns">{{ game.odds.away }}</td>
-                            
+                            <td rowspan="2" class="table-centered-data table-data-spacing table-equal-width-columns"> <time id="example-date-time">{{ game.commence_time }}</time> </td>
+                            <td class="table-data-spacing table-equal-width-columns">{{ game.away_team }}</td>
+                            <td class="table-centered-data">{{ game.avg_home_odds }}</td>
                         </tr>
                         <tr class="table-away-team">
-                            <td class="table-data-spacing table-equal-width-columns">{{ game.home_team.city }} {{ game.home_team.name }}</td>
-                            <td class="table-centered-data table-data-spacing table-equal-width-columns">{{ game.odds.home }}</td>
-                           
+                            <td class="table-data-spacing table-equal-width-columns"> {{ game.home_team }}</td>
+                            <td class="table-centered-data">{{ game.avg_away_odds }}</td>
                         </tr>
                     </tbody>
                 </table>
+               
             </div>
         {% endfor %}
     </div>
