--- a/static/css/main.css
+++ b/static/css/main.css
@@ -24,7 +24,7 @@ body {
 header {
     background-color: #242221;
     color: #fff;
-    padding: 10px;
+    padding: 20px;
 }
 
 header h1 {
@@ -419,6 +419,7 @@ input:checked + .slider:before {
     margin-left: 16px;
     text-decoration: none;
     white-space: nowrap;
+    
 }
 
 .date-no-wrap{
@@ -426,9 +427,9 @@ input:checked + .slider:before {
 }
 
 .countdown-timer {
-    position: fixed;
-    top: 10px;
-    right: 10px;
+    position: absolute;
+    top: 6rem;
+    right: 15rem;
     font-size: 18px;
     font-weight: bold;
     background-color: rgba(0, 0, 0, 0.5);
@@ -462,11 +463,14 @@ input:checked + .slider:before {
 .main-container {
     display: flex;
     width:100%;
+    padding-bottom: 10%;
     
 }
 .auto-refresh-container {
     margin-left: 230px;
     flex: 1 1 70%;
+    padding-top:20px;
+    
 }
 .content-wrapper {
     display: flex;
@@ -475,5 +479,137 @@ input:checked + .slider:before {
   }
 
 .heading-spacing {
-    margin-bottom: 54px; /* Adjust this value to create more or less space */
+   /* Adjust this value to create more or less space */
+    padding-bottom: 3%;
+}
+
+.switch-container .other {
+    margin-left: 30px;
+}
+.switch-label {
+    display: inline-block;
+    margin-right: 8px;
+    font-size: 14px;
+    font-weight: bold;
+    vertical-align: middle;
+}
+
+
+
+
+.parameters {
+    background-color: #242221;
+    padding: 10px 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100.4%;
+}
+
+.bankroll-form {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.form-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+}
+
+.bankroll, .bankroll-input, .kelly-multiplier {
+    background-color: #2D2D2D;
+    color: white;
+}
+
+h3.bankroll-output, .kelly-name, .kelly-output {
+    color: white;
+}
+
+.navbar-nav-right {
+    position: absolute;
+    right: 15rem;
+    top: 1.5rem;
+  }
+
+.dropdown-menu {
+    overflow: hidden;
+    background-color: #333;
+    font-family: Arial;
+
+}
+
+ /* The side navigation menu */
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 10px;
+  display: none;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #389e90;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+#main {
+  transition: margin-left .5s;
+  padding: 16px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+
+@media (min-width: 768px) {
+    .sidenav {
+      display: block;
+    }
+  }
+
+#logos-title{
+
+    position: absolute;
+    margin-top: 1rem;
+    margin-left: 2rem;
+    padding-bottom: 4rem;
+}
+
+#inner-main {
+    transition: marigin-left .5s;
+    
+}
+
+#title-logo{
+
+    font-family: 'Josefin Sans', sans-serif;
+    color:#389e90;
 }
