--- a/templates/baseball/baseball.html
+++ b/templates/baseball/baseball.html
@@ -45,7 +45,7 @@
                                             <th class="matchup seafoam-bg">A.I.</th>
                                             <th class="matchup seafoam-bg">A.I.%</th>
                                             <th class="matchup">EV%</th>
-                                            <th class="matchup">EV$</th>
+                                          <!--  <th class="matchup">EV$</th> -->
                                             <th class="matchup">Kelly Calc</th>
                                             <th class="matchup">Bet Size</th>
                                         </tr>
@@ -74,7 +74,7 @@
                                             <td class="table-centered-data min-width-expected-value">
                                                 <span class="ev-color">{{ game.away_expected_value }}%</span>
                                             </td>
-                                            <td class="table-centered-data min-width-odds">${{ game.away_expected_value_bet }}</td>
+                                        <!--    <td class="table-centered-data min-width-odds">${{ game.away_expected_value_bet }}</td> -->
                                             <td class="table-centered-data min-width-odds">{{ game.kelly_away_bet | round(2) }}</td>
                                             <td class="table-centered-data min-width-odds">${{ game.kelly_gross_away | round(2) }}</td>
                                         </tr>
