update_table_again

--- a/templates/baseball/baseball.html
+++ b/templates/baseball/baseball.html
@@ -98,7 +98,7 @@
                                             <td class="table-centered-data min-width-expected-value">
                                                 <span class="ev-color">{{ game.home_expected_value }}%</span>
                                             </td>
-                                            <td class="table-centered-data min-width-odds">${{ game.home_expected_value_bet }}</td>
+                                       <!--     <td class="table-centered-data min-width-odds">${{ game.home_expected_value_bet }}</td> -->
                                             <td class="table-centered-data min-width-odds">{{ game.kelly_home_bet | round(2) }}</td>
                                             <td class="table-centered-data min-width-odds">$ {{ game.kelly_gross_home | round(2) }}</td>
                                         </tr>
