--- a/templates/baseball/baseball.html
+++ b/templates/baseball/baseball.html
@@ -34,7 +34,8 @@
             <div id="countdown-timer" class="countdown-timer"></div> 
             <div class="table-spacing">
                 {% for game in games %}
-                    {% if game.away_prediction is not none or game.home_prediction is not none and game.has_started == False %}
+                    {% if not game.has_started and (game.away_prediction is not none or game.home_prediction is not none) and (game.bookmaker_count > 8) %}
+                        
                         <div class="content-to-refresh">
                             <div class="game-container">
                                 <table class="table table-striped table-game-spacing table-limited-width">
