major_refactor_db

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
-{% extends 'base.html' %}
+{% extends 'base3.html' %}
 
 {% block content %}
-    <h1>Welcome to the Sports Betting App</h1>
+    <h1>betsmart.ai</h1>
     <p>Explore live betting data for your favorite sports:</p>
     <ul>
         <li><a href="{{ url_for('baseball.mlb_index') }}">Baseball</a></li>
