--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,12 +1,14 @@
-{% extends "base.html" %}
+{% extends "base3.html" %}
 
 {% block content %}
+
+<div class="main">
 <h2>Sign Up</h2>
 <form action="{{ url_for('user_bp.signup') }}" method="POST">
     {{ form.hidden_tag() }}
     <p>
-        {{ form.username.label }}<br>
-        {{ form.username(size=32) }}
+        {{ form.email.label }}<br>
+        {{ form.email(size=32) }}
     </p>
     <p>
         {{ form.password.label }}<br>
@@ -18,6 +20,7 @@
     </p>
     <p>{{ form.submit() }}</p>
 </form>
+
 {% with messages = get_flashed_messages(with_categories=true) %}
     {% if messages %}
         <ul class=flashes>
@@ -27,4 +30,5 @@
         </ul>
     {% endif %}
 {% endwith %}
+</div>
 {% endblock %}
