--- a/templates/subscription.html
+++ b/templates/subscription.html
@@ -1,5 +1,6 @@
-<!doctype html>
-<html lang="en">
+{% extends 'base3.html' %}
+
+{% block content %}
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -37,3 +38,4 @@
     </script>
 </body>
 </html>
+{% endblock %}
