--- a/templates/base3.html
+++ b/templates/base3.html
@@ -83,7 +83,7 @@
                 <ul class="navbar-nav navbar-nav-right">
                     {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link">Hello, {{ user.username }}!</a>
+                            <a class="nav-link">Hello, {{ user.email }}!</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('user_bp.logout') }}">Logout</a>
