--- a/templates/subscription.html
+++ b/templates/subscription.html
@@ -1,41 +1,15 @@
 {% extends 'base3.html' %}
 
 {% block content %}
+<html>
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Stripe.js v3 -->
-    <script src="https://js.stripe.com/v3/"></script>
-    
-    <title>Subscription Page</title>
+    <title>Subscription</title>
 </head>
 <body>
-    <h1>Subscribe to Premium</h1>
-    <form action="/charge" method="post" id="payment-form">
-        <div class="form-row">
-            <label for="card-element">
-                Credit or debit card
-            </label>
-            <div id="card-element">
-                <!-- A Stripe Element will be inserted here. -->
-            </div>
-            <!-- Used to display form errors. -->
-            <div id="card-errors" role="alert"></div>
-        </div>
+    <h1>Subscribe for premium content</h1>
+    <p>Click on the button below to subscribe</p>
 
-        <button>Submit Payment</button>
-    </form>
-
-    <!-- Your Stripe publishable key -->
-    <script>
-        var stripe = Stripe('pk_test_51N8T8MKVHJFy6fE2N62AaTGRJ7ifoNCv9RLJqoRVgwypsErQJ02SzwEWZBRjczyThp4TJppbsHdkWJ2fEyUG9SEk00G4wHQQa7');
-        var elements = stripe.elements();
-        var card = elements.create('card');
-        card.mount('#card-element');
-        // Add additional JS to handle form submission and card errors
-    </script>
+    <a href='{{ stripe_url }}'>Subscribe Now</a>
 </body>
 </html>
 {% endblock %}
