--- a/templates/base3.html
+++ b/templates/base3.html
@@ -112,7 +112,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2023 - betsmart.ai</p> <p>BETA-TEST Figures may not be correct in all circumstances as refactoring is still in progress. Use with caution. </p>
+        <p class="footertext">&copy; 2023 - betsmart.ai</p> <p>BETA-TEST Figures may not be correct in all circumstances as refactoring is still in progress. Use with caution. </p>
     </footer>
 
     <!-- Bootstrap and necessary JavaScript files -->
