--- a/templates/baseball/baseball.html
+++ b/templates/baseball/baseball.html
@@ -5,7 +5,7 @@
   
     
     
-    <div class="main-container">
+    <div class="main-container" style="max-width:100%;height:auto;">
        
         <div id="auto-refresh-container">
             <h1 class="heading-spacing">Upcoming MLB</h1> 
